[gd_scene load_steps=11 format=2]

[ext_resource path="res://Art/icecreamMachine.png" type="Texture" id=1]
[ext_resource path="res://IcecreamMachine.gd" type="Script" id=2]
[ext_resource path="res://Art/icecream.png" type="Texture" id=3]
[ext_resource path="res://Art/progress_foreground.png" type="Texture" id=4]
[ext_resource path="res://Art/progress_background.png" type="Texture" id=5]
[ext_resource path="res://Music/InteractSound.mp3" type="AudioStream" id=6]
[ext_resource path="res://Music/Bell.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 41, 60.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 57 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="IcecreamMachine" type="StaticBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 9.53674e-07, 0.500002 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 3.14159
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
flip_v = true

[node name="IcecreamTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ProgressBar" type="TextureProgress" parent="."]
margin_left = -33.0
margin_top = -4.0
margin_right = 67.0
margin_bottom = 16.0
rect_scale = Vector2( 0.7, 1 )
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )

[node name="FoodSprite" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="InteractSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Bell" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="IcecreamTimer" to="." method="_on_IcecreamTimer_timeout"]
